--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Nyumath2048 : NYU Math-GA 2048: Scientific Computing in Finance">
+    <meta name="description" content="Scientific Computing in Finance : Math-GA 2048, New York University, Spring 2015">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Nyumath2048</title>
+    <title>Scientific Computing in Finance</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/yadongli/nyumath2048">View on GitHub</a>
 
-          <h1 id="project_title">Nyumath2048</h1>
-          <h2 id="project_tagline">NYU Math-GA 2048: Scientific Computing in Finance</h2>
+          <h1 id="project_title">Scientific Computing in Finance</h1>
+          <h2 id="project_tagline">Math-GA 2048, New York University, Spring 2015</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/yadongli/nyumath2048/zipball/master">Download this project as a .zip file</a>
@@ -31,44 +31,75 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a id="course-materials" class="anchor" href="#course-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Materials</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The lecture slides are in HTML format, which requires javascript enabled browser to render properly. 
+All lecture slides are generated using IPython notebook, click the link ipynb to view the source
+IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
+<a href="http://github.com/yadongli/numfin">http://github.com/yadongli/numfin</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Lecture slides and homework will be published weekly before the Wednesday lecture.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<table>
+<thead>
+<tr>
+<th align="center">Lecture</th>
+<th align="center">Materials</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">1. Introduction</td>
+<td align="center">
+<a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/numfin/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/numfin/blob/master/Homework1.ipynb">homework</a>
+</td>
+</tr>
+</tbody>
+</table>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p></p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h2>
+<a id="python-setup" class="anchor" href="#python-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python setup</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Python is the primary programming tool for this class. The following is a step by step instruction on how to set up the right Python environment for the class.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p><a href="PythonSetup.slides.html">Python setup instructions </a></p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h2>
+<a id="how-to-saveprint-slides-as-pdf" class="anchor" href="#how-to-saveprint-slides-as-pdf" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to save/print slides as PDF</h2>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li>open the lecture slides using Chrome browser and append "?print-pdf" to the end of the URL, e.g.:
+<a href="Lecture1.slides.html?print-pdf"></a><a href="https://yadongli.github.io/numfin/Lecture1.slides.html?print-pdf">https://yadongli.github.io/numfin/Lecture1.slides.html?print-pdf</a> </li>
+<li>reloading the page with the "?print-pdf" in the url, select print from the right click mouse menu in Chrome</li>
+<li>In the pop up print window, select "Save as PDF" in Destination, and select "None" for Margins</li>
+<li>click Save and give it a destination file name </li>
+</ul>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Similar steps should also work in other browsers, as long as you already have a PDF printer. The latest Chrome browser supports "Save as PDF" out of box. </p>
+
+<h2>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h2>
+
+<p>All course materials and codes are given as-is, without any warranty or claim for completeness or correctness. </p>
+
+<h2>
+<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h2>
+
+<p><a href="https://github.com/yadongli" class="user-mention">@yadongli</a> <a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></p>
+
+<p>© 2014-2015, all rights reserved</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Nyumath2048 maintained by <a href="https://github.com/yadongli">yadongli</a></p>
+        <p class="copyright">Scientific Computing in Finance maintained by <a href="https://github.com/yadongli">yadongli</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
