--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>The lecture slides are in HTML format, which requires javascript enabled browser to render properly. 
 All lecture slides are generated using IPython notebook, click the link ipynb to view the source
 IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
-<a href="http://github.com/yadongli/numfin">http://github.com/yadongli/numfin</a>.</p>
+<a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture.</p>
 
@@ -54,7 +54,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <tr>
 <td align="center">1. Introduction</td>
 <td align="center">
-<a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/numfin/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/numfin/blob/master/Homework1.ipynb">homework</a>
+<a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework1.ipynb">homework</a>
 </td>
 </tr>
 </tbody>
@@ -74,7 +74,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <ul>
 <li>open the lecture slides using Chrome browser and append "?print-pdf" to the end of the URL, e.g.:
-<a href="Lecture1.slides.html?print-pdf"></a><a href="https://yadongli.github.io/numfin/Lecture1.slides.html?print-pdf">https://yadongli.github.io/numfin/Lecture1.slides.html?print-pdf</a> </li>
+<a href="Lecture1.slides.html?print-pdf"></a><a href="https://yadongli.github.io/nyumath2048/Lecture1.slides.html?print-pdf">https://yadongli.github.io/nyumath2048/Lecture1.slides.html?print-pdf</a> </li>
 <li>reloading the page with the "?print-pdf" in the url, select print from the right click mouse menu in Chrome</li>
 <li>In the pop up print window, select "Save as PDF" in Destination, and select "None" for Margins</li>
 <li>click Save and give it a destination file name </li>
