--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1751,7 +1751,7 @@ div.output_prompt {
 </ul>
 <h3 id="yadong-li">Yadong Li</h3>
 <ul>
-<li>Head of trading book caital modeling, Barclays</li>
+<li>Head of trading book capital modeling, Barclays</li>
 <li>Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison</li>
 <li>Master of Financial Engineering, University of California, Berkeley </li>
 </ul>
@@ -1798,14 +1798,14 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="different-levels-of-understanding">Different levels of understanding</h3>
+<h4 id="levels-of-understanding">Levels of understanding</h4>
 <ul>
-<li>background: talk about the problem</li>
-<li>information: understand the key drivers, and can simplify the problem</li>
+<li>background: describe the problem</li>
+<li>information: understand the key drivers</li>
 <li>insight: fomulate it as a mathematical problem</li>
-<li>knowledge: solved the problem</li>
-<li>experience: used the solution in practice, understand its limitations and connection to other problems </li>
-<li>intuition: the knowledge and experience gained allow you to easily reason about other problems</li>
+<li>knowledge: solved the mathematical problem</li>
+<li>experience: seen and used the numbers, understand the limitations and connections </li>
+<li>intuition: able to see through things, and sensibly reason about new problems</li>
 </ul>
 </div>
 </div>
@@ -1820,6 +1820,7 @@ div.output_prompt {
 <h2 id="we-expect-you">We expect you</h2>
 <ul>
 <li>Know basic calculus and linear algebra</li>
+<li>Know basic stochastic calculus and derivative pricing theories</li>
 <li>Have some prior programming experience</li>
 <li>Are willing to learn through hard work</li>
 </ul>
@@ -1921,6 +1922,17 @@ div.output_prompt {
 <p>P. Glasserman 2010</p>
 </li>
 </ul>
+</div>
+</div>
+</div></section><section>
+    
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="lecture-notes-and-homework">Lecture notes and homework</h2>
+<p>Available online at: <a href="http://yadongli.github.io/nyumath2048">http://yadongli.github.io/nyumath2048</a></p>
 <h2 id="grades">Grades</h2>
 <ul>
 <li>Homework 50%</li>
@@ -1938,7 +1950,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="software-basics">Software Basics</h1>
+<h1 id="software-practices">Software Practices</h1>
 </div>
 </div>
 </div></section><section>
@@ -2262,7 +2274,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="this-class-uses-python">This Class uses Python</h2>
+<h2 id="we-use-python">We use Python</h2>
 <p>Python</p>
 <ul>
 <li>a powerful dynamic scripting language </li>
@@ -2277,6 +2289,15 @@ div.output_prompt {
 <li>IPython: highly productive interactive working environment</li>
 <li>Pandas: powerful data and time series analysis package</li>
 </ul>
+</div>
+</div>
+</div></section><section>
+    
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>Python resources</p>
 <ul>
 <li>Enthought Canopy: a commercial Python distribution, free for students</li>
@@ -2289,8 +2310,10 @@ div.output_prompt {
 <li>With the latest IPython, numpy/pandas/scipy etc.</li>
 <li>either 32bit or 64bit version</li>
 </ul>
-<p>Pyton setup guide:</p>
-<p><a href="http://yadongli.github.io/numfin/PythonSetup.slides.html">http://yadongli.github.io/numfin/PythonSetup.slides.html</a></p>
+<p>Pyton setup instructions:</p>
+<ul>
+<li>available at: <a href="http://yadongli.github.io/nyumath2048">http://yadongli.github.io/nyumath2048</a></li>
+</ul>
 </div>
 </div>
 </div></section>
