--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2399,6 +2399,10 @@ div.output_prompt {
 </ul>
 </li>
 <li>addition and multiplication are still commutative, but not associative</li>
+<li>intermediate calculations could be done at higher precision to minimize rounding error<ul>
+<li>e.g. Intel CPU&#39;s FPU uses 80bit representation for intermediate calculation</li>
+</ul>
+</li>
 </ul>
 </li>
 <li>basic operations<ul>
@@ -2433,7 +2437,7 @@ div.output_prompt {
 <li>but they are necessary evils for the greater goods</li>
 </ul>
 </li>
-<li>it allows hardware designer and software developer to stick to a common interface</li>
+<li>it establishes a clear interface hardware designers and software developers</li>
 <li>its main designer, William Kahan won the Turing award in 1989</li>
 </ul>
 <p>The standard is widely implemented in modern hardware and software,</p>
