--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2325,7 +2325,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="errors-and-floating-point">Errors and floating point</h1>
+<h1 id="errors-and-floating-point-computation">Errors and floating point computation</h1>
 <p>James Gosling: &quot;95% of the folks out there are completely clueless about floating-point&quot;</p>
 </div>
 </div>
