--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1730,7 +1730,7 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="scientific-computing-in-finance">Scientific Computing in Finance</h1>
 <ul>
-<li>Spring 2015</li>
+<li>MATH-GA 2048, Spring 2015</li>
 <li>Courant Institute of Mathematical Sciences</li>
 <li>New York University</li>
 </ul>
@@ -1751,7 +1751,7 @@ div.output_prompt {
 </ul>
 <h3 id="yadong-li">Yadong Li</h3>
 <ul>
-<li>Head of trading book capital modeling, Barclays</li>
+<li>Head of trading book risk modeling, Barclays</li>
 <li>Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison</li>
 <li>Master of Financial Engineering, University of California, Berkeley </li>
 </ul>
@@ -1784,7 +1784,7 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="objectives-of-this-class">Objectives of this class</h2>
 <ul>
-<li>Teach principles of scientific computing</li>
+<li>Teach fundamental principles of scientific computing</li>
 <li>Teach the most common numerical techniques in quantitative Finance </li>
 <li>Develop intuitions and essential skills using real world examples</li>
 <li>Help students to start a career in quantitative Finance</li>
@@ -1800,12 +1800,12 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="levels-of-understanding">Levels of understanding</h4>
 <ul>
-<li>background: describe the problem</li>
-<li>information: understand the key drivers</li>
-<li>insight: fomulate it as a mathematical problem</li>
-<li>knowledge: solved the mathematical problem</li>
-<li>experience: seen and used the numbers, understand the limitations and connections </li>
-<li>intuition: able to see through things, and sensibly reason about new problems</li>
+<li>description: able to talk about the problem</li>
+<li>insight: understand the dynamics and key drivers</li>
+<li>abstraction (model): fomulate it as a mathematical problem</li>
+<li>knowledge: solve the mathematical problem</li>
+<li>experience (skill): solved the real problems, understand the practical limitations</li>
+<li>intuition: able to see through, make connections and sensibly reason new problems</li>
 </ul>
 </div>
 </div>
@@ -1883,12 +1883,12 @@ div.output_prompt {
 <tr>
 <td style="text-align:center">7-8</td>
 <td style="text-align:center">Optimization</td>
-<td style="text-align:center">Model calibration, Maximum entropy</td>
+<td style="text-align:center">Model calibration</td>
 </tr>
 <tr>
 <td style="text-align:center">9-11</td>
 <td style="text-align:center">Monte Carlo simulation</td>
-<td style="text-align:center">Derivative pricing, Allocation</td>
+<td style="text-align:center">Exotic pricing, Max entropy, Allocation</td>
 </tr>
 <tr>
 <td style="text-align:center">12-13</td>
@@ -2010,6 +2010,12 @@ div.output_prompt {
 <td style="text-align:right">~5ms</td>
 <td style="text-align:right">$\infty$</td>
 </tr>
+<tr>
+<td style="text-align:center">Network</td>
+<td style="text-align:right">evn slower</td>
+<td style="text-align:right">much slower</td>
+<td style="text-align:right">$\infty$</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -2071,6 +2077,7 @@ div.output_prompt {
 <h4 id="modifiability">Modifiability</h4>
 <ul>
 <li>&quot;modification is undesirable but modifiability is paramount&quot;</li>
+<li>modular design, learn from hardware designers</li>
 </ul>
 </div>
 </div>
@@ -2099,10 +2106,7 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="other-desirable-features-">Other desirable features:</h4>
 <ul>
-<li>Scalability</li>
-<li>Robustness</li>
-<li>Easy support and maintenance</li>
-<li>and many more</li>
+<li>Scalability, robustness, Easy support and maintenanc etc.</li>
 </ul>
 </div>
 </div>
@@ -2262,8 +2266,8 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Eric Raymond, &quot;How to Become a Hacker&quot;:</p>
 <p>&quot;Lisp is worth learning for the profound enlightenment experience you will have when you finally get it; that experience will make you a better programmer for the rest of your days, even if you never actually use Lisp itself a lot.&quot;</p>
-<p>Eric Raymond, &quot;How to Become a Hacker&quot;</p>
 </div>
 </div>
 </div>
@@ -2277,7 +2281,7 @@ div.output_prompt {
 <h2 id="we-use-python">We use Python</h2>
 <p>Python</p>
 <ul>
-<li>a powerful dynamic scripting language </li>
+<li>a powerful dynamic and strongly typed scripting language </li>
 <li>extremely popular in scientific computing</li>
 <li>strong momentum in quantitative finance</li>
 <li>highly productive, low learning curve</li>
@@ -2306,7 +2310,7 @@ div.output_prompt {
 </ul>
 <p>Python version:</p>
 <ul>
-<li><strong> Python 2.7 </strong> : python 3 is not backward compatible</li>
+<li><strong> Python 2.7.x </strong> : python 3 is not backward compatible</li>
 <li>With the latest IPython, numpy/pandas/scipy etc.</li>
 <li>either 32bit or 64bit version</li>
 </ul>
@@ -2344,7 +2348,7 @@ div.output_prompt {
 </ul>
 <p>Both measure are useful in practice.</p>
 <ul>
-<li>Beware of the absolute value when compare relative errors</li>
+<li>Beware of the absolute values when compare relative errors</li>
 </ul>
 </div>
 </div>
