minor edits in lecture1

--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1801,11 +1801,11 @@ div.output_prompt {
 <h4 id="levels-of-understanding">Levels of understanding</h4>
 <ul>
 <li>description: able to talk about the problem</li>
-<li>insight: understand the dynamics and key drivers</li>
-<li>abstraction (model): fomulate it as a mathematical problem</li>
-<li>knowledge: solve the mathematical problem</li>
-<li>experience (skill): solved the real problems, understand the practical limitations</li>
-<li>intuition: able to see through, make connections and sensibly reason new problems</li>
+<li>insight: understood the dynamics and key drivers</li>
+<li>abstraction (model): fomulated it as a mathematical problem</li>
+<li>knowledge: solved the mathematical problem</li>
+<li>experience (skill): applied the theory to real world, understood the practical limitations</li>
+<li>intuition: able to see through, make connections and sensibly reason about new problems</li>
 </ul>
 </div>
 </div>
@@ -2012,8 +2012,8 @@ div.output_prompt {
 </tr>
 <tr>
 <td style="text-align:center">Network</td>
-<td style="text-align:right">evn slower</td>
-<td style="text-align:right">much slower</td>
+<td style="text-align:right">vary</td>
+<td style="text-align:right">much longer</td>
 <td style="text-align:right">$\infty$</td>
 </tr>
 </tbody>
