changed slides template and title format

--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1849,7 +1849,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="main-topics-in-this-class">Main Topics in this class</h2>
+<h2 id="main-topics-in-this-class">Main topics in this class</h2>
 <p>A rough schedule of the class:</p>
 <table>
 <thead>
@@ -1960,7 +1960,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="modern-hardware">Modern Hardware</h2>
+<h2 id="modern-hardware">Modern hardware</h2>
 <ul>
 <li>Processor speed/throughput continues to grow at an impressive rate<ul>
 <li>multi-core</li>
@@ -2359,7 +2359,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="sources-of-error">Sources of Error</h2>
+<h2 id="sources-of-error">Sources of error</h2>
 <p>Impreciseness in the theory or model itself</p>
 <ul>
 <li>George Box: &quot;essentially, all models are wrong, but some are useful&quot;</li>
@@ -2389,7 +2389,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="ieee-754-standard">IEEE 754 Standard</h2>
+<h2 id="ieee-754-standard">IEEE 754 standard</h2>
 <p>First published in 1985, the standard includes:</p>
 <ul>
 <li>floating point number representations <ul>
@@ -3242,7 +3242,7 @@ inverse of 1.000000e-309 is inf
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="limited-precision">Limited Precision</h2>
+<h2 id="limited-precision">Limited precision</h2>
 <ul>
 <li>Small number is often lost in addition and subtraction</li>
 </ul>
@@ -3363,7 +3363,7 @@ b - maxint == b ? True
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="subtle-errors">Subtle Errors</h2>
+<h2 id="subtle-errors">Subtle errors</h2>
 <p>The limited precision can cause subtle errors that are puzzling even for experiened programmers.</p>
 </div>
 </div>
@@ -4234,7 +4234,7 @@ $$1$$
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="condition-number">Condition Number</h2>
+<h2 id="condition-number">Condition number</h2>
 <p>Consider the relative error of a function with multiple arguments: $f = f(x_1, ..., x_n)$:</p>
 <p>\begin{eqnarray} 
 df &amp;=&amp; \sum_i \frac{\partial f}{\partial x_i} dx_i \\
@@ -4260,7 +4260,7 @@ $$</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="condition-number-examples">Condition Number Examples</h2>
+<h2 id="condition-number-examples">Condition number examples</h2>
 <p> Condition number is the systematic way to detect potential numerical problems:</p>
 <ul>
 <li><p>$f(x_1, x_2) = x_1 - x_2$ </p>
@@ -4573,7 +4573,7 @@ Reveal.initialize({
      // width: 100%,
      // height: 100%,
      // margin: 0,
-     theme: 'sky', // available themes are in /css/theme
+     theme: 'white', // available themes are in /css/theme
 });
 
 </script>
