--- a/PythonSetup.slides.html
+++ b/PythonSetup.slides.html
@@ -1728,13 +1728,13 @@ div.output_prompt {
 }
 </style>
 
-<script>
+<!-- script>
 $(document).ready(function(){
   $(".output_wrapper").click(function(){
       $(this).prev('.input_hidden').slideToggle();
   });
 })
-</script>
+</script -->
 
 
 <body>
@@ -2153,7 +2153,7 @@ Reveal.initialize({
      // width: 100%,
      // height: 100%,
      // margin: 0,
-     theme: 'sky', // available themes are in /css/theme
+     theme: 'white', // available themes are in /css/theme
 });
 
 </script>
