--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1744,16 +1744,21 @@ div.output_prompt {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="instructors">Instructors</h2>
-<h3 id="hongwei-cheng">Hongwei Cheng</h3>
+<h4 id="hongwei-cheng">Hongwei Cheng</h4>
 <ul>
 <li>Head of financial model validation, Prudential</li>
 <li>Ph.D. Mathematics, New York University</li>
 </ul>
-<h3 id="yadong-li">Yadong Li</h3>
+<h4 id="yadong-li">Yadong Li</h4>
 <ul>
 <li>Head of trading book risk modeling, Barclays</li>
 <li>Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison</li>
 <li>Master of Financial Engineering, University of California, Berkeley </li>
+</ul>
+<h2 id="teaching-assitant">Teaching Assitant</h2>
+<h4 id="maulik-desai">Maulik Desai</h4>
+<ul>
+<li>Ph.D. EECS, Columbia University</li>
 </ul>
 </div>
 </div>
@@ -1938,6 +1943,7 @@ div.output_prompt {
 <li>Homework 50%</li>
 <li>Project 30%</li>
 <li>Final 20%</li>
+<li>Extra credits for pointing out errors in slides/homework</li>
 </ul>
 </div>
 </div>
@@ -1963,8 +1969,8 @@ div.output_prompt {
 <h2 id="modern-hardware">Modern hardware</h2>
 <ul>
 <li>Processor speed/throughput continues to grow at an impressive rate<ul>
-<li>multi-core</li>
-<li>GPU </li>
+<li>Moore&#39;s law has ruled for a long time</li>
+<li>recent trends: multi-core, GPU </li>
 </ul>
 </li>
 <li>Memory capacity continues to grow, but memory speed only grows at a (relatively) slow rate</li>
@@ -2192,7 +2198,7 @@ div.output_prompt {
 <ul>
 <li>Design dumb modules that only does one thing, and one thing really well</li>
 <li>Keep it simple and stupid</li>
-<li>Separation of concerns</li>
+<li>Separation of concerns, modular</li>
 </ul>
 </div>
 </div>
@@ -2441,7 +2447,7 @@ div.output_prompt {
 <li>but they are necessary evils for the greater goods</li>
 </ul>
 </li>
-<li>it establishes a clear interface hardware designers and software developers</li>
+<li>it establishes a clear interface for hardware designers and software developers</li>
 <li>its main designer, William Kahan won the Turing award in 1989</li>
 </ul>
 <p>The standard is widely implemented in modern hardware and software,</p>
@@ -2520,7 +2526,7 @@ $$</p>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[1]:
+In&nbsp;[3]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2590,7 +2596,7 @@ Populating the interactive namespace from numpy and matplotlib
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[2]:
+In&nbsp;[4]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2643,7 +2649,7 @@ In&nbsp;[2]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[3]:
+In&nbsp;[5]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2717,7 +2723,7 @@ In&nbsp;[3]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[4]:
+In&nbsp;[6]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2791,7 +2797,7 @@ In&nbsp;[4]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[5]:
+In&nbsp;[7]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2845,7 +2851,7 @@ In&nbsp;[5]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[6]:
+In&nbsp;[8]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2900,7 +2906,7 @@ In&nbsp;[6]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[7]:
+In&nbsp;[9]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2955,7 +2961,7 @@ In&nbsp;[7]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[8]:
+In&nbsp;[10]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3019,7 +3025,7 @@ In&nbsp;[8]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[9]:
+In&nbsp;[11]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3056,7 +3062,7 @@ b - c = -1.110223e-16
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[10]:
+In&nbsp;[12]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3111,7 +3117,7 @@ In&nbsp;[10]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[11]:
+In&nbsp;[13]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3175,7 +3181,7 @@ In&nbsp;[11]:
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[12]:
+In&nbsp;[14]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3207,7 +3213,7 @@ inverse of 1.000000e-308 is 1.000000e+308
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[13]:
+In&nbsp;[15]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3252,7 +3258,7 @@ inverse of 1.000000e-309 is inf
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[14]:
+In&nbsp;[16]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3283,7 +3289,7 @@ False
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[15]:
+In&nbsp;[17]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3315,7 +3321,7 @@ True
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[16]:
+In&nbsp;[18]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3371,7 +3377,7 @@ b - maxint == b ? True
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[17]:
+In&nbsp;[19]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3405,7 +3411,7 @@ a/3 =  [ 0.          0.33333333]
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[18]:
+In&nbsp;[20]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3447,7 +3453,7 @@ b =  [ 0.          0.33333333  0.66666667]
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[19]:
+In&nbsp;[21]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3494,7 +3500,7 @@ b =  [ 0.          0.33333333]
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[20]:
+In&nbsp;[22]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3565,7 +3571,7 @@ exp_taylor(-5) = -0.025249, exp(-5) = 0.006738
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[21]:
+In&nbsp;[23]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3884,7 +3890,7 @@ URQfosFbURTFh2jwVhRF8SEavBVFUXyIBm9FURQf8v8BsjQh+2fwJ7wAAAAASUVORK5CYII=
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[22]:
+In&nbsp;[24]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3957,7 +3963,7 @@ $$</p>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[23]:
+In&nbsp;[25]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4193,7 +4199,7 @@ ICciCjgGORFRwDHIiYgCjkFORBRwDHIiooBjkBMRBdz/B2/7YW3pj9DJAAAAAElFTkSuQmCC
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[24]:
+In&nbsp;[26]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4214,7 +4220,7 @@ In&nbsp;[24]:
 
 
 <div class="output_area"><div class="prompt output_prompt">
-    Out[24]:</div>
+    Out[26]:</div>
 
 
 <div class="output_latex output_subarea output_pyout">
@@ -4307,7 +4313,7 @@ $$</p>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[25]:
+In&nbsp;[27]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4327,7 +4333,7 @@ In&nbsp;[25]:
 
 
 <div class="output_area"><div class="prompt output_prompt">
-    Out[25]:</div>
+    Out[27]:</div>
 
 
 <div class="output_latex output_subarea output_pyout">
