--- a/PythonSetup.slides.html
+++ b/PythonSetup.slides.html
@@ -1809,7 +1809,7 @@ $(document).ready(function(){
 <li>Enthought canopy comes with a graphical package manager</li>
 <li>Anaconda comes with command line package manager <code>conda</code></li>
 <li><a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)</li>
-<li>both distributions support major OS</li>
+<li>both distributions support major OSes</li>
 </ul>
 <p>Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS.</p>
 </div>
@@ -1832,9 +1832,12 @@ $(document).ready(function(){
 <p><code>ipython notebook</code></p>
 <p>You should see a browser wndow with a list of notebooks (with extension .ipynb) under your current folder, click the link to open and edit notebook within the browser. </p>
 <ul>
-<li>IPython notebook works with new versions of all major browsers. (not IE older than version 10 does not work)</li>
+<li>IPython notebook works with new versions of all major browsers. (IE older than version 10 does not work)</li>
 </ul>
-<p>Check your IPython installation if you do not see a brower window like below:</p>
+<p>You should see a brower window like below after you start ipython notebook. Check your installation if you don&#39;t,</p>
+<ul>
+<li>Then you can click on individual notebooks to view and edit them.</li>
+</ul>
 <p><img src="img/ipynb.png" height=300, width=600></p>
 </div>
 </div>
@@ -1847,7 +1850,7 @@ $(document).ready(function(){
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="python-code-data-for-the-class">Python code/data for the class</h2>
 <p>The python code and data are in the subfolder lib and data under your nyumath2048 folder.</p>
-<p><strong>important:</strong> You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder in your PYTHONPATH.</p>
+<p><strong>important:</strong> You need to create an environment variable PYTHONPATH and add the full path to your local nyumath2048/lib folder to your PYTHONPATH.</p>
 <ul>
 <li>this step allows python interpretor to find the python modules for the class</li>
 <li>you won&#39;t be able to run the class IPython notebook without performing this step</li>
@@ -1884,6 +1887,9 @@ $(document).ready(function(){
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="create-slides-using-ipython">Create slides using IPython</h2>
 <p>IPython notebook is a great tool for creating presentations, it seamlessly integrates markdown, latex, charts, python codes and output.</p>
+<ul>
+<li>you don&#39;t need to create slides for your homework submission, but you may want to use it for your project presentation.</li>
+</ul>
 <p><img src="img/ip_slide.png"></p>
 <p>Steps to create slides within IPython notebook:</p>
 <ul>
