--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ All lecture slides are generated using IPython notebook, click the link ipynb to
 IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
-<p>Lecture slides and homework will be published weekly before the Wednesday lecture. Please read the following <a href="%22ClassPolicy.slides.html%22">class policy</a></p>
+<p>Lecture slides and homework will be published weekly before the Wednesday lecture. Please read the following <a href="%22ClassPolicies.slides.html%22">class policy</a>.</p>
 
 <p></p>
 
