Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <h2>
 <a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h2>
 
-<p>All course materials and codes are given as-is, without any warranty or claim for completeness or correctness. </p>
+<p>All course materials and codes are provided as-is, without any warranty for completeness or correctness. </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h2>
