fixed typo - 1 credit to Yishen Song

--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2483,7 +2483,7 @@ $$</p>
 <tr>
 <th style="text-align:center">Format</th>
 <th style="text-align:right">Sign</th>
-<th style="text-align:right">Fraction</th>
+<th style="text-align:right">Fraction (incl. the implicit bit)</th>
 <th style="text-align:right">Exponent</th>
 <th style="text-align:right">$p$</th>
 </tr>
@@ -2492,7 +2492,7 @@ $$</p>
 <tr>
 <td style="text-align:center">IEEE 754 - 32 bit</td>
 <td style="text-align:right">1</td>
-<td style="text-align:right">23</td>
+<td style="text-align:right">24</td>
 <td style="text-align:right">8</td>
 <td style="text-align:right">127</td>
 </tr>
