Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. Please read the following <a href="ClassPolicies.slides.html">class policy</a>.</p>
 
+<p><a href="http://github.com/yadongli/nyumath2048/blob/master/ScientificComputing_Syllabus.pdf?raw=true">Syllabus</a></p>
+
 <p></p>
 
 <table>
