--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@ All lecture slides are generated using IPython notebook, click the link ipynb to
 IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
-<p><a href="http://github.com/yadongli/nyumath2048/blob/master/ScientificComputing_Syllabus.pdf">Class Syllabus</a>
-<a href="ClassPolicies.slides.html">Class policies</a>.</p>
+<ul>
+<li><a href="http://github.com/yadongli/nyumath2048/blob/master/ScientificComputing_Syllabus.pdf">syllabus</a></li>
+<li>
+<a href="ClassPolicies.slides.html">Class policies</a>.</li>
+</ul>
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
 
