Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
 <ul>
-<li><a href="http://github.com/yadongli/nyumath2048/blob/master/ScientificComputing_Syllabus.pdf">syllabus</a></li>
+<li><a href="https://raw.githubusercontent.com/yadongli/nyumath2048/master/syllabus.pdf">syllabus</a></li>
 <li>
 <a href="ClassPolicies.slides.html">Class policies</a>.</li>
 </ul>
