--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2124,7 +2124,7 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In practice, what often trumpets everything else is: </p>
+<p>In practice, what often trumps everything else is: </p>
 <h2 id="time-to-market-">Time to market !!</h2>
 </div>
 </div>
