Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework1.ipynb">homework</a>
 </td>
 </tr>
+<tr>
+<td align="center">2. Linear Algebra I</td>
+<td align="center">
+<a href="Lecture2.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture2.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework2.ipynb">homework</a>
+</td>
+</tr>
 </tbody>
 </table>
 
